--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,12 @@ html {
     background-color: black;
 }
 body {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    position: relative; /* для мобилок, чтобы не скролилось*/
 }
+
 .back-parallax{
     position: absolute;
     height: 100vh;
@@ -20,6 +23,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    background-color: black; /*ПОТОМ УБРАТЬ*/
 }
 .parallax{
     position: absolute; /* чтобы png наслаивались друг на друга*/
@@ -57,10 +62,11 @@ footer {
     justify-content: space-between;
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 100vw;
     height: 100px;
     z-index: 2;
     box-shadow: 0px -100px 55px -62px rgba(0, 0, 0, 1) inset;
+    margin-bottom: 0;
 }
 .social-network {
     width: 20%;
@@ -78,7 +84,7 @@ footer {
     width: 20%;
     color: white;
     font-family: "Dancing Script", cursive;
-    font-size: 28px;
+    font-size: 24px;
     margin-top: 3%;
     text-align: center;
 }
@@ -167,4 +173,16 @@ h1 {
     background-repeat: no-repeat;
     transition: 1.5s;
     z-index: 4;
+}
+
+.bg-image{
+    background-image: url("./images/1.jpg");
+    background-position: center;
+    height: 100vh;
+    width: 100vw;
+    background-size: cover;
+    z-index: -100;
+
+    filter: blur(1.5rem);
+    position: absolute;
 }
