--- a/styles.css
+++ b/styles.css
@@ -182,7 +182,7 @@ h1 {
 }
 
 .bg-image {
-    background-image: url("./images/1.jpg");
+    background-image: url("./images/1.webp");
     background-position: center;
     height: 100vh;
     width: 100vw;
