--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,15 @@ body {
     position: relative; /* для мобилок, чтобы не скролилось*/
 }
 
+a{
+    height: 30px;
+    width: 30px;
+    margin: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .back-parallax {
     position: absolute;
     height: 100vh;
@@ -47,13 +56,23 @@ body {
     transition: opacity 1s;
 }
 .icons {
-    width: 60%;
-    height: 60%;
+    width: 30px;
+    height: 30px;
     transition: 0.3s;
 }
 .icons:hover {
-    width: 70%;
-    height: 70%;
+    width: 40px;
+    height: 40px;
+    transition: 0.3s;
+}
+.icons-b {
+    width: 40px;
+    height: 40px;
+    transition: 0.3s;
+}
+.icons-b:hover {
+    width: 50px;
+    height: 50px;
     transition: 0.3s;
 }
 button,
@@ -70,27 +89,30 @@ footer {
     height: 100px;
     z-index: 2;
     box-shadow: 0px -100px 55px -62px rgba(0, 0, 0, 1) inset;
-    margin-bottom: 0;
 }
 .social-network {
-    width: 20%;
+    width: 30%;
     display: flex;
-    justify-content: center;
-    height: 90%;
-    margin-top: 2%;
+    justify-content: start;
+    align-items: center;
+    margin-left: 5%;
 }
 .button-menu {
-    width: 60%;
+    width: 40%;
     display: flex;
     justify-content: center;
 }
 .sign {
-    width: 20%;
+    width: 30%;
     color: white;
     font-family: "BeautifulFont", cursive;
     font-size: 24px;
-    margin-top: 3%;
-    text-align: center;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+.author{
+    padding: 10%;
 }
 
 .center-menu {
@@ -120,6 +142,8 @@ h1 {
 
 .open-gallery {
     display: inline;
+    height: 100%;
+    width: 50%;
 }
 .close-gallery {
     display: none;
@@ -209,5 +233,25 @@ h1 {
         background-size: auto 120vh;
         width: 100%;
         height: 100%;
+    }
+
+    a{
+        height: 20px;
+        width: 20px;
+        margin: 4%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .icons {
+        width: 20px;
+        height: 20px;
+        transition: 0.3s;
+    }
+    .icons:hover {
+        width: 30px;
+        height: 30px;
+        transition: 0.3s;
     }
 }
